# BMP

BMP_Pro/: CMakeLists.txt  color.h  display.cpp  display.h  image.cpp  image.h  main.cpp  point.cpp  point.h
build-BMP_Pro-Desktop-Debug/: BMP_Pro  CMakeCache.txt  Makefile  cmake_install.cmake
build-BMP_Pro-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-bec21cee4302d27e0eac.json  cmakeFiles-v1-d485fb9a161b8e824732.json  codemodel-v2-9a620f3f61080a4834a4.json  index-2022-05-27T03-19-10-0731.json  target-BMP_Pro-Debug-e38c673cd3b31e057767.json
build-BMP_Pro-Desktop-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-5e75e6c7d7e8d631a514.json  index-2022-05-27T01-52-21-0864.json  target-BMP_Pro-Debug-cdbcffca2864d1ba0832.json
build-BMP_Pro-Desktop-Debug/.qtc_clangd/: compile_commands.json
